# GPGPU_SCIA

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  benchmark.sh  benchmark_results.csv  compile_commands.json  create_plots.py  cuda_first_cuda_api_gpu_sum.csv  profile.sh
src/: Compute.cpp  Compute.cu  Compute.hpp  background.cpp  background.cu  background.hpp  stream.cpp
